[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lvrgd-common"
version = "0.1.0"
description = "Common services and utilities for LVRGD projects"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "LVRGD Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "minio>=7.2.7",
    "pydantic>=2.11.9",
    "pymongo>=4.15.1",
]

[project.optional-dependencies]
dev = [
    "bson>=0.5.10",
    "mongomock>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.13.1",
    "flake8>=7.3.0",
    "black>=25.9.0",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/services"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "bson>=0.5.10",
    "mongomock>=4.3.0",
    "pymongo>=4.15.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
]

[tool.ruff]
lint.select = ["ALL"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
