[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lvrgd-common"
version = "0.1.0"
description = "Common services and utilities for LVRGD projects"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "LVRGD Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "minio>=7.2.7",
    "pydantic>=2.11.9",
    "pymongo>=4.15.1",
]

[project.optional-dependencies]
dev = [
    "bson>=0.5.10",
    "mongomock>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.13.1",
    "flake8>=7.3.0",
    "black>=25.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "bson>=0.5.10",
    "mongomock>=4.3.0",
    "pymongo>=4.15.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
]

[tool.ruff]
line-length = 100
extend-exclude = [".github"]
lint.select = ["ALL"]
lint.ignore = [
    "COM812",  # Conflicts with formatter
    "D203",    # Conflicts with D211
    "D213",    # Conflicts with D212
    "E501",    # Line too long (handled by formatter)
    "TC001",   # Type-checking block - overly strict, runtime imports are fine
    "TC003",   # Type-checking block - overly strict, runtime imports are fine
    "PLR0913", # Too many arguments - 5 is arbitrary, 6-7 args acceptable for clarity
    "ANN401",  # Disallow Any - sometimes needed for dict(**kwargs) patterns
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D100",    # Don't require module docstrings in tests
    "D103",    # Don't require function docstrings in tests
    "S105",    # Allow hardcoded passwords in tests
    "S108",    # Allow temp file usage in tests
    "INP001",  # Tests don't need __init__.py
]
"**/minio_models.py" = [
    "S105",    # Example credentials in Field examples
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["services"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
